--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 assets/ckpt-omnimol.zip filter=lfs diff=lfs merge=lfs -text
+assets/train.zip filter=lfs diff=lfs merge=lfs -text
+assets/evaluate.zip filter=lfs diff=lfs merge=lfs -text
